Fix: Remove .env sourcing from deploy script and fix special characters

--- a/.env.docker
+++ b/.env.docker
@@ -22,7 +22,7 @@ EMAIL_USER=your_gmail@gmail.com
 EMAIL_PASS=your_gmail_app_password_here
 
 # Sender email address (usually same as EMAIL_USER)
-EMAIL_FROM=Resort Booking <your_gmail@gmail.com>
+EMAIL_FROM=your_gmail@gmail.com
 
 # JotForm Integration (Optional)
 # ------------------------------
